--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8" />
-</head>
-<body aurelia-app>	
-	<script src="jspm_packages/system.js"></script>
-	<script src="config.js"></script>
-	<script>
-		System.import("aurelia-bootstrapper");
-	</script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Aurelia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+
+  <body aurelia-app="main">
+    <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
+  </body>
 </html>
