--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,5 @@
 <template>
+	<require from="bootstrap/css/bootstrap.css"></require>
 	<div class="container-fluid">
 		<div class="col-md-offset-4 col-md-4">
 			<h1>An Aurelia HighCharts Component</h1>
